server/compilers/goLiteJS/src/test/ml1/invalid/decl18.go
//no var keyword in tuple declaration
package main

x, y int
